--- a/application/.htaccess
+++ b/application/.htaccess
@@ -4,13 +4,13 @@
 <IfModule !authz_core_module>
     Deny from all
 </IfModule>
-DirectoryIndex index.php
+# DirectoryIndex index.php
  
 # Rewrite engine
 RewriteEngine On
  
 # condition with escaping special chars
-RewriteCond $1 !^(index\.php|robots\.txt|favicon\.ico)
+RewriteCond $1 !^(index\.php|resources|robots\.txt)
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ ./index.php/$1 [L,QSA]
